<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddPartidoActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/txtequipoLocal" />

    <Spinner
        android:id="@+id/localSpinnerAddPartido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/txtequipoVisitante" />

    <Spinner
        android:id="@+id/visitanteSpinnerAddPartido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtGolesLocalAddPartido"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="5"
            android:hint="@string/txtGolesLocal"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtGolesVisitanteAddPartido"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:ems="10"
            android:hint="@string/txtGolesVisitante"
            android:inputType="textPersonName" />

    </LinearLayout>

    <EditText
        android:id="@+id/txtResumenAddPartido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:ems="10"
        android:hint="@string/txtResumen"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelarAddPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />

        <Button
            android:id="@+id/btnAceptarAddPartido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/btnAceptar" />
    </LinearLayout>

</LinearLayout>